# ampq-load-tester

./: Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
src/: main.rs
